--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/boot">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/utilities.css">
@@ -15,7 +14,7 @@
     <!---------Navbar---------->
     <div class="nav-bar ">
         <div class="container flex">
-            <div class="logo"><img src="images/logos/logo.png" alt="" height="45px" width="65px"></div>  
+            <div class="logo"><a href="index.html"><img src="images/logos/logo.png" alt="" height="45px" width="65px"></a></div>  
             <nav class="nav-links">
                 <ul>
                     <li><a href="index.html" class = "active">Home</a></li>
@@ -32,7 +31,7 @@
         <div class="container grid">
             <div class="showcase-text">
                 <h1>Easier Deployment</h1>
-                <p>
+                <p class="lead">
                     Deploy web app of all kinds, from large scale enterprise APIs
                     to static websites for individuals. Fill out the form to try a demo of our platform
                 </p>
@@ -149,6 +148,8 @@
             </div>
         </div>
     </section>
+
+    <!-- footer -->
     <footer class="footer bg-dark py-5">
         <div class="container grid grid-3">
             <div>
