--- a/docs.html
+++ b/docs.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/boot">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/utilities.css">
@@ -15,7 +14,7 @@
     <!---------Navbar---------->
     <div class="nav-bar ">
         <div class="container flex">
-            <div class="logo"><img src="images/logos/logo.png" alt="" height="45px" width="65px"></div>  
+            <div class="logo"><a href="index.html"><img src="images/logos/logo.png" alt="" height="45px" width="65px"></a></div> 
             <nav class="nav-links">
                 <ul>
                     <li><a href="index.html" >Home</a></li>
@@ -25,5 +24,104 @@
             </nav>  
         </div>
     </div>
+
+
+    <!-- Head -->
+    <section class="docs-head bg-primary py-3">
+        <div class="container grid">
+            <div>
+                <h1 class="md">Docs</h1>
+                <p class="lead">
+                Learn how to work with the Loruki platform
+                </p>
+            </div>
+            <img src="./images/docs.png" alt="">
+        </div>
+    </section>
+
+<!-- Docs Main -->
+
+    <section class="docs-main my-4">
+        <div class="container grid">
+           <div class="card">
+               <h3>Essentials</h3>
+               <nav>
+                   <ul>
+                    <li><a href="">Introduction</a></li>
+                    <li><a href="">About Loruki</a></li>
+                    <li><a href="">Installation</a></li>  
+                   </ul>
+               </nav>
+
+               <h3>Deployments</h3>
+               <nav>
+                   <ul>
+                    <li><a href="">Setting up a container</a></li>
+                    <li><a href="">Using the CLI</a></li>
+                    <li><a href="">Managing resources</a></li>
+                    <li><a href="">Upgrade and downgrade</a></li>
+                   </ul>
+               </nav>
+           </div> 
+
+           <div class="card">
+               <h2>Introduction</h2>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                   Totam recusandae doloribus corrupti? Ex incidunt adipisci enim? 
+                   Fugiat, quis non! Blanditiis tenetur soluta accusantium facilis 
+                   in fugiat perferendis vitae inventore iure.</p>
+                   <div class="alert alert-success">
+                       <i class="fas fa-info"></i>
+                       Lorem ipsum dolor sit amet consectetur.
+                   </div>
+                   <h3>Lorem ipsum dolor sit.</h3>
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                       Quo ad nesciunt minus inventore amet eveniet!</p>
+                       <a href="" class="btn btn-primary">Install CLI</a>
+
+                    <h3>Requirements</h3> 
+                    <ul>
+                        <li>Windows 10, Mac OSX, Linux</li>
+                        <li>Node.js v12 or higher</li>
+                    </ul> 
+
+                    <h3>Install</h3>
+                    <p>Mac (Homebrew)</p>
+                    <pre><code>$ brew install loruki-cli</code></pre>
+                    <p>NPM</p>
+                    <pre><code>$ npm install loruki-cli</code></pre>
+                    <p>Yarn</p>
+                    <pre><code>$ yarn install loruki-cli</code></pre>
+           </div>
+        </div>
+    </section>
+
+
+
+
+
+<!-- Footer -->
+
+    <footer class="footer bg-dark py-5">
+        <div class="container grid grid-3">
+            <div>
+                <h1>Loruki</h1>
+                <p>Copyright&copy; 2021</p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="features.html">Features</a></li>
+                    <li><a href="docs.html">Docs</a></li>
+                </ul>
+            </nav>
+            <div class="social">
+                <a href=""><i class="fab fa-github fa-2x"></i></a>
+                <a href=""><i class="fab fa-facebook fa-2x"></i></a>
+                <a href=""><i class="fab fa-twitter fa-2x"></i></a>
+                <a href=""><i class="fab fa-instagram fa-2x"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
